eat-the-world/src/Home/Search.scss
.search-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 8rem;
  position: relative;
  height: 55%;
  overflow: hidden;

  &__header {
    text-shadow: 0 0 10px rgba(141, 40, 40, 0.4);
  }
}

.search-container__background {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  opacity: 0.22;
}

.search-container-form {
  display: flex;
  z-index: 2;
  height: 3rem;
  width: 30rem;
  background-color: white;
  border-radius: 10rem;
  opacity: 1;
  overflow: hidden;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);

  &__label {
    display: none;
  }

  &__input {
    border: none;
    height: 100%;
    flex-grow: 1;
    outline: none;
    padding: 0 1.5rem;
  }

  &__button {
    width: 4rem;
    cursor: pointer;
    border: none;
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

